--- a/src/main/resources/templates/comp/joinForm.mustache
+++ b/src/main/resources/templates/comp/joinForm.mustache
@@ -12,8 +12,10 @@
 
 		<form action="/comp/join" method="post" enctype="multipart/form-data" onsubmit="valid()">
 			<div class="d-flex form-group mt-2 mb-2">
-				<input type="email" name="email" class="form-control" placeholder="아이디(이메일)" id="email" onchange="useremailChange()"/>
-				<button type="button" class="badge bg-secondary ms-2"onclick="check()">중복체크</button>
+				<input type="hidden" name="role" value=2 />
+				<input type="email" name="email" class="form-control" placeholder="아이디(이메일)" id="email"
+					onchange="useremailChange()" />
+				<button type="button" class="badge bg-secondary ms-2" onclick="check()">중복체크</button>
 			</div>
 
 			<div class="mt-4"></div>
@@ -83,58 +85,58 @@
 	</div>
 </div>
 <script>
-    
-    // 전체동의 체크박스 요소
-    let serviceAgreementCheckbox = document.querySelector("#serviceAgreement");
-    // 필수 약관 동의 체크박스 요소들
-    let termsAgreementCheckbox = document.querySelector("#termsAgreement");
-    let privacyAgreementCheckbox = document.querySelector("#privacyAgreement");
-    let emailAgreementCheckbox = document.querySelector("#emailAgreement");
 
-    // 전체동의 체크박스가 변경되면 개별 동의 체크박스도 변경됩니다.
-    serviceAgreementCheckbox.addEventListener("change", function () {
-        let checked = serviceAgreementCheckbox.checked;
-        termsAgreementCheckbox.checked = checked;
-        privacyAgreementCheckbox.checked = checked;
-        emailAgreementCheckbox.checked = checked;
-    });
+	// 전체동의 체크박스 요소
+	let serviceAgreementCheckbox = document.querySelector("#serviceAgreement");
+	// 필수 약관 동의 체크박스 요소들
+	let termsAgreementCheckbox = document.querySelector("#termsAgreement");
+	let privacyAgreementCheckbox = document.querySelector("#privacyAgreement");
+	let emailAgreementCheckbox = document.querySelector("#emailAgreement");
 
-    let useremailSameCheck = false;
+	// 전체동의 체크박스가 변경되면 개별 동의 체크박스도 변경됩니다.
+	serviceAgreementCheckbox.addEventListener("change", function () {
+		let checked = serviceAgreementCheckbox.checked;
+		termsAgreementCheckbox.checked = checked;
+		privacyAgreementCheckbox.checked = checked;
+		emailAgreementCheckbox.checked = checked;
+	});
 
-    function useremailChange() {
-        console.log("이메일 값이 변경됨");
-        useremailSameCheck = false;
-    }
-    function valid() {
-        if (useremailSameCheck) {
-            return true;
-        } else {
-            alert("이메일 중복체크를 해주세요");
-            return false;
-        }
-    }
+	let useremailSameCheck = false;
 
-    // 책임 : input태그로 부터 useremail을 가져와서 통신을 요청하고, 중복이 되었는지 확인한다.
+	function useremailChange() {
+		console.log("이메일 값이 변경됨");
+		useremailSameCheck = false;
+	}
+	function valid() {
+		if (useremailSameCheck) {
+			return true;
+		} else {
+			alert("이메일 중복체크를 해주세요");
+			return false;
+		}
+	}
+
+	// 책임 : input태그로 부터 useremail을 가져와서 통신을 요청하고, 중복이 되었는지 확인한다.
 	async function check() {
-        // 1. DOM으로 부터 값 가져오기
-        let useremail = document.querySelector("#email").value;
+		// 1. DOM으로 부터 값 가져오기
+		let useremail = document.querySelector("#email").value;
 
-        // 2. 통신하기
-        let response = await fetch(`/check?useremail=${useremail}`);
+		// 2. 통신하기
+		let response = await fetch(`/check?useremail=${useremail}`);
 
-        // 3. 파싱하기
-        let responseBody = await response.json();
-        console.log(responseBody);
+		// 3. 파싱하기
+		let responseBody = await response.json();
+		console.log(responseBody);
 
-        // 4. 상태코드 확인
-        let button = document.querySelector("#button");
-        if (responseBody.sucuess === true) {
-            alert("이메일을 사용할 수 있습니다.");
-            useremailSameCheck = true;
-        } else {
-            alert("이메일을 사용할 수 없습니다.");
-            useremailSameCheck = false;
-        }
+		// 4. 상태코드 확인
+		let button = document.querySelector("#button");
+		if (responseBody.sucuess === true) {
+			alert("이메일을 사용할 수 있습니다.");
+			useremailSameCheck = true;
+		} else {
+			alert("이메일을 사용할 수 없습니다.");
+			useremailSameCheck = false;
+		}
 	}
 </script>
 
